<resources>
    <string name="app_name">VIDA</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="onboarding_title_1">Find Nearby</string>
    <string name="onboarding_desc_1">Charging Stations</string>
    <string name="onboarding_title_2">Remote</string>
    <string name="onboarding_desc_2">Access to\nyour scooter</string>
    <string name="onboarding_title_3">Track</string>
    <string name="onboarding_desc_3">Live location\nof scooter</string>
    <string name="onboarding_title_4">Find your</string>
    <string name="onboarding_desc_4">Community\non vida</string>

    <string name="register">Register</string>
    <string name="by_tapping_you_are_agreeing_to_hero">By tapping, you are agreeing to Hero</string>
    <string name="terms_and_privacy"><![CDATA[Terms of Use & Privacy Policy]]></string>
    <string name="welcome_to_vida">Welcome to VIDA</string>
    <string name="hello">Hello!</string>
    <string name="confirm_your_scooter">Confirm your scooter</string>
    <string name="range">Range</string>
    <string name="kms">kms</string>
    <string name="top_speed">Top Speed</string>
    <string name="kmph">kmph</string>
    <string name="in_3_sec">In 3 Sec</string>
    <string name="kmh">km/h</string>
    <string name="in_4_hours">In 4 Hours</string>
    <string name="registration_no">Registration No.</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="vin_no">VIN No.</string>
    <string name="confirm_continue">Confirm &amp; Continue</string>
    <string name="not_your_scooter">Not your Scooter?</string>
    <string name="add_your_scooter">Add your scooter</string>
    <string name="add_your_vehicle">Add Your Vehicle</string>
    <string name="vehicle_identification_number">Please enter your Vehicle Identification Number</string>
    <string name="enter_VIN_number">Enter VIN Number</string>
    <string name="or_scan_qr_code">Or Scan QR Code</string>
    <string name="find_the_vin_number_qr_code">You can find the VIN number &amp; QR code on a label stuck on the handle</string>
    <string name="add">Add</string>
    <string name="personal_detail">Personal Detail</string>
    <string name="full_name">Full Name</string>
    <string name="login_with_face_id">Login with Face ID</string>
    <string name="or">or</string>
    <string name="enter_4_digit_pin">Enter 4 digit Pin</string>
    <string name="wrong_pin">Wrong PIN</string>
    <string name="forgot_pin">Forgot PIN?</string>
    <string name="pin">Pin</string>
    <string name="new_to_vida">New to VIDA?</string>
    <string name="register_now">Register Now</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="register_mobile_number">Register Mobile Number</string>
    <string name="enter_number">Enter Number</string>

    <string name="tv_home">Home</string>
    <string name="tv_health">Health</string>
    <string name="tv_trip">Trip</string>
    <string name="tv_sharing">Sharing</string>
    <string name="tv_menu">Menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">This screen will be here soon.</string>
    <string name="no_internet_found">no internet</string>
    <string name="tv_connected">Connected</string>
    <string name="tv_disconnected">Disconnected</string>
    <string name="tv_locked">Locked</string>
    <string name="tv_unlock">Unlock</string>
    <string name="tv_unlocked">Unlocked</string>
    <string name="tv_open_boot">Open Boot</string>
    <string name="tv_tips">Tips</string>
    <string name="tv_navigate_to_nearby_charging_point">Navigate to Nearby \nCharging Point</string>
    <string name="tv_you_will_need_a_charging_stop_to_reach_home">You will need a charging stop \nto reach home.</string>
    <string name="tv_schedule_service">Schedule Service</string>
    <string name="tv_style_your_scooter">Style your scooter</string>
    <string name="tv_style_your_scooter_with_the_configurator">Style your scooter with the configurator.</string>
    <string name="tv_your_full_name">Full Name</string>
    <string name="tv_your_email">Email Id</string>
    <string name="tv_mobile_number">Mobile Number</string>
    <string name="tv_dob">Date of Birth</string>
    <string name="tv_blood_group">Blood Group (optional)</string>
    <string name="tv_street_name">Street Name</string>
    <string name="tv_pin_code">Pin Code</string>
    <string name="tv_city">City</string>
    <string name="tv_state">State</string>
    <string name="tv_continue">Continue</string>
    <string name="app_security">App Security</string>
    <string name="set_a_4_digit_pin_to_secure_your_app">Set a 4 digit pin to secure your app</string>
    <string name="set_pin">Set PIN</string>
    <string name="conform_pin">Conform Pin</string>
    <string name="conform_continue"><![CDATA[Confirm & Continue]]></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="use_face_id_finger_print_n_authentication"><![CDATA[Use face ID & finger print \nauthentication?]]></string>
    <string name="quick_controls">Quick Controls</string>
    <string name="customise">Customise</string>
    <string name="remote_immobilization">Remote Immobilization</string>
    <string name="share_scooter_location">Share Scooter Location</string>
    <string name="ping_my_scooter">Ping my Scooter</string>
    <string name="live_tracking">Live Tracking</string>
    <string name="geofence">Geofence</string>
    <string name="app_version_v2_00">App Version - V2.00</string>
    <string name="take_photo">Take Photo</string>
    <string name="what_would_you_like_to_do">What would you like to do?</string>
    <string name="choose_from_library">Choose from Library</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="move_to_scale">Move to scale</string>
    <string name="take_another">Take Another</string>
    <string name="confirm">Confirm</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="immobilize_scooter">Immobilize Scooter</string>
    <string name="cancel_immobilization">Cancel Immobilization</string>
    <string name="navigation">Navigation</string>
    <string name="last_location">Last Location</string>
    <string name="search_here">Search here</string>
    <string name="charging_point">Charging Point</string>
    <string name="scooter_immobilized">Scooter Immobilized</string>
    <string name="_15_kms_away_from_your_location">15 kms away from your location</string>
    <string name="navigation_available_on_scooter_dashboard">Navigation available on \nscooter dashboard</string>
    <string name="you_are_applying_brake_toofrequently_try_and_reduce_braking_by_50">You are applying brake toofrequently. \nTry and reduce braking by 50%</string>
    <string name="harsh_braking">Harsh Braking</string>
    <string name="likes_comments"><![CDATA[Likes & Comments]]></string>
    <string name="notification_on_your_posts_likes_comments">Notification on your posts/likes/\ncomments</string>
    <string name="add_3_contacts_in_case_of_emergency_and_they_will_be_notified">Add 3 contacts, In case of emergency and they \nwill be notified.</string>
    <string name="notification_content">Your scooter battery is less then 25%. \nPlease fill up the charge within 30 kms</string>
    <string name="find_your_scooter_using_the_scooter_flash_lights_and_horn">Find your scooter using the scooter \nflash lights and horn</string>


    <string name="oil_price">Oil Price</string>
    <string name="price_in_last_12_days">Price in last 12 days</string>
    <string name="panic_issue_image">panic issue image</string>


    <string name="alert_description_critical_alerts">We have sent a notification and current location to emergency contacts.</string>
    <string name="alert_button_text_critical_alerts">I am safe now</string>
    <string name="alert_title_intruder_noticed">Intruder Noticed!</string>
    <string name="alert_title_battery_removed">Battery Removed!</string>
    <string name="alert_title_fell_down">Fell Down!</string>
    <string name="alert_title_accident">Accident!</string>
    <string name="alert_title_panic_alert">Panic Alert!</string>
    <string name="alert_title_critical_low_charge">Critical Low Charge!</string>
    <string name="alert_title_need_a_charging_stop">Need a Charging Stop!</string>
    <string name="you_are_just_a_few_seconds_away_to_know_your_scooter_health">You are just a few seconds away to know \nyour scooter health</string>
    <string name="show_battery_progress">show battery progress</string>
    <string name="confirm_make_payment"><![CDATA[Confirm & Make Payment]]></string>
    <string name="recommended_includes_all_plans"><![CDATA[Recommended & Includes all plans]]></string>
    <string name="drag_drop_the_widget_to_available_on_dashboard"><![CDATA[Drag & Drop the widget to available on dashboard]]></string>

    <string name="setFence">Set a Geo fence</string>
    <string name="currentlocn">Current Scooter Location</string>
    <string name="currentlocnfour">ibis gurgao golf course road</string>

</resources>