<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.vida.ui.dashboard.fragment.HomeFragment"
        android:label="@string/tv_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_health"
        android:name="com.example.vida.ui.dashboard.fragment.HealthFragment"
        android:label="@string/tv_health"
        tools:layout="@layout/fragment_health" />

    <fragment
        android:id="@+id/navigation_sharing"
        android:name="com.example.vida.ui.dashboard.fragment.SharingFragment"
        android:label="@string/tv_trip"
        tools:layout="@layout/fragment_sharing" />

    <fragment
        android:id="@+id/navigation_trip"
        android:name="com.example.vida.ui.dashboard.fragment.TripFragment"
        android:label="@string/tv_trip"
        tools:layout="@layout/fragment_trip" />

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.example.vida.ui.dashboard.fragment.MenuFragment"
        android:label="@string/tv_menu"
        tools:layout="@layout/fragment_menu" />
</navigation>