<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/clLanding"
    android:background="@drawable/ic_landing_bg"
    tools:context=".ui.landing.LandingActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="@dimen/_minus8sdp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/hello"
        android:textColor="@color/colorBlackGrey"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintBottom_toTopOf="@+id/tvWelcome"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/welcome_to_vida"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="@dimen/_46sdp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/radius_bg"
        android:backgroundTint="@color/colorDarkPrimary"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:stateListAnimator="@null"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@+id/tvInstruction"
        app:layout_constraintEnd_toStartOf="@+id/btnRegister"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="@dimen/_46sdp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/radius_bg"
        android:backgroundTint="@color/colorRegisterButtonPrimary"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:stateListAnimator="@null"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/colorNero"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@+id/tvInstruction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/tvInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/by_tapping_you_are_agreeing_to_hero"
        android:textColor="@color/colorDarkGray"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintBottom_toTopOf="@+id/tvTerms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/terms_and_privacy"
        android:textColor="@color/colorLightRed"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>