<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_main_bg"
        tools:context=".ui.register.ScooterDetailActivity">

        <TextView
            android:id="@+id/tvConfirmScooter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="@string/confirm_your_scooter"
            android:textColor="@color/colorNero"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvScooterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_extrabold"
            android:includeFontPadding="false"
            android:text="VIDA NEO"
            android:textColor="@color/colorNero"
            android:textSize="@dimen/_28sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvConfirmScooter" />

        <ImageView
            android:id="@+id/ivScooterImage"
            android:layout_width="220dp"
            android:layout_height="300dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvScooterName"
            app:srcCompat="@drawable/ic_scooter_left" />

        <TextView
            android:id="@+id/tvRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="@string/range"
            android:textColor="@color/colorSolidGray"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintStart_toEndOf="@+id/ivScooterImage"
            app:layout_constraintTop_toTopOf="@+id/ivScooterImage" />

        <TextView
            android:id="@+id/tvRangeCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"
            android:text="120"
            android:textColor="@color/colorNero"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="@+id/tvRange"
            app:layout_constraintTop_toBottomOf="@+id/tvRange" />

        <TextView
            android:id="@+id/tvRangeKM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="@string/kms"
            android:textColor="@color/colorNero"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintStart_toEndOf="@+id/tvRangeCount"
            app:layout_constraintTop_toBottomOf="@+id/tvRange" />

        <TextView
            android:id="@+id/tvTopSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="@string/top_speed"
            android:textColor="@color/colorSolidGray"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintStart_toStartOf="@+id/tvRangeCount"
            app:layout_constraintTop_toBottomOf="@+id/tvRangeCount" />

        <TextView
            android:id="@+id/tvTopSpeedCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"
            android:text="50"
            android:textColor="@color/colorNero"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="@+id/tvTopSpeed"
            app:layout_constraintTop_toBottomOf="@+id/tvTopSpeed" />

        <TextView
            android:id="@+id/tvTopSpeedKM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="@string/kmph"
            android:textColor="@color/colorNero"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintStart_toEndOf="@+id/tvTopSpeedCount"
            app:layout_constraintTop_toBottomOf="@+id/tvTopSpeed" />

        <TextView
            android:id="@+id/tvInSec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="@string/in_3_sec"
            android:textColor="@color/colorSolidGray"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintStart_toStartOf="@+id/tvTopSpeedCount"
            app:layout_constraintTop_toBottomOf="@+id/tvTopSpeedCount" />

        <TextView
            android:id="@+id/tvInSecCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"
            android:text="0-40"
            android:textColor="@color/colorNero"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="@+id/tvInSec"
            app:layout_constraintTop_toBottomOf="@+id/tvInSec" />

        <TextView
            android:id="@+id/tvInSecKM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="@string/kmh"
            android:textColor="@color/colorNero"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintStart_toEndOf="@+id/tvInSecCount"
            app:layout_constraintTop_toBottomOf="@+id/tvInSec" />

        <TextView
            android:id="@+id/tvInHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="@string/in_4_hours"
            android:textColor="@color/colorSolidGray"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintStart_toStartOf="@+id/tvInSecCount"
            app:layout_constraintTop_toBottomOf="@+id/tvInSecCount" />

        <TextView
            android:id="@+id/tvInHoursCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"
            android:text="10"
            android:textColor="@color/colorNero"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="@+id/tvInHours"
            app:layout_constraintTop_toBottomOf="@+id/tvInHours" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="%"
            android:textColor="@color/colorNero"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintStart_toEndOf="@+id/tvInHoursCount"
            app:layout_constraintTop_toBottomOf="@+id/tvInHours"
            tools:layout_editor_absoluteX="260dp"
            tools:layout_editor_absoluteY="372dp" />

        <TextView
            android:id="@+id/tvRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="@string/registration_no"
            android:textColor="@color/colorSolidGray"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivScooterImage" />

        <TextView
            android:id="@+id/tvRegistrationNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="TN 01 AA 5555"
            android:textColor="@color/colorNero"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRegistration" />

        <TextView
            android:id="@+id/tvMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="@string/mobile_no"
            android:textColor="@color/colorSolidGray"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintStart_toEndOf="@+id/ivScooterImage"
            app:layout_constraintTop_toBottomOf="@+id/ivScooterImage" />

        <TextView
            android:id="@+id/tvMobileNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="*********55"
            android:textColor="@color/colorNero"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintStart_toStartOf="@+id/tvMobile"
            app:layout_constraintTop_toBottomOf="@+id/tvMobile" />

        <TextView
            android:id="@+id/tvVIN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="@string/vin_no"
            android:textColor="@color/colorSolidGray"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRegistrationNo" />

        <TextView
            android:id="@+id/tvVINNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="MAUHD3D2OJSD79743"
            android:textColor="@color/colorNero"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintStart_toStartOf="@+id/tvVIN"
            app:layout_constraintTop_toBottomOf="@+id/tvVIN" />

        <TextView
            android:id="@+id/btnContinue"
            android:layout_width="0dp"
            android:layout_height="@dimen/_48sdp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_button_bg"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:stateListAnimator="@null"
            android:text="@string/confirm_continue"
            android:textAllCaps="false"
            android:textColor="@color/colorNero"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvVINNo" />

        <TextView
            android:id="@+id/tvNotYourScooter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins_regular"
            android:includeFontPadding="false"
            android:paddingTop="@dimen/_6sdp"
            android:paddingBottom="@dimen/_6sdp"
            android:text="@string/not_your_scooter"
            android:textColor="@color/colorNero"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvAddYourScooter"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnContinue" />

        <TextView
            android:id="@+id/tvAddYourScooter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:paddingTop="@dimen/_6sdp"
            android:paddingBottom="@dimen/_6sdp"
            android:text="@string/add_your_scooter"
            android:textColor="@color/colorLightRed"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvNotYourScooter"
            app:layout_constraintTop_toBottomOf="@+id/btnContinue" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>