<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.personaldetail.ImagePreviewActivity">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_arrow" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="46dp"
        android:fontFamily="@font/poppins_medium"
        android:includeFontPadding="false"
        android:text="@string/upload_picture"
        android:textColor="@color/colorNero"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintStart_toEndOf="@+id/ivBack"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_180sdp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:srcCompat="@drawable/ic_profile_image" />

    <ImageView
        android:id="@+id/ivImageCropper"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_180sdp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:srcCompat="@drawable/ic_crop_image" />

    <TextView
        android:id="@+id/tvMove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_regular"
        android:includeFontPadding="false"
        android:text="@string/move_to_scale"
        android:textColor="@color/colorDarkGray"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivImageCropper" />

    <TextView
        android:id="@+id/btnTakeAnother"
        android:layout_width="0dp"
        android:layout_height="@dimen/_46sdp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_button_bg"
        android:backgroundTint="@color/colorNero"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:stateListAnimator="@null"
        android:text="@string/take_another"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toStartOf="@+id/btnConfirm"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMove" />

    <TextView
        android:id="@+id/btnConfirm"
        android:layout_width="0dp"
        android:layout_height="@dimen/_46sdp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_button_bg"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:stateListAnimator="@null"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@color/colorNero"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnTakeAnother"
        app:layout_constraintTop_toBottomOf="@+id/tvMove" />

</androidx.constraintlayout.widget.ConstraintLayout>